// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen enumerators config import-export] should create the enumerators: the enumerators have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ enumerator => Environment/cfgObjectTest
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen enumerators config import-export] should update the enumerators: the enumerators have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ enumerator => Environment/cfgObjectTest
Completed. 1 object(s) imported.
",
}
`;
